--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Les jeunes et la drogue</title>
-  <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Inknut+Antiqua:600|Roboto|Roboto+Condensed:700'><link rel="stylesheet" href="./style.css">
+  <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Inknut+Antiqua:600|Roboto|Roboto+Condensed:700'>
+  <link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
@@ -16,7 +17,7 @@
     </figure>
     <div class="item-parallax-content flex-container">
       <div class="landing-content centered-content">
-        <h1 class="head-large">Les jeunes et la drogu</h1>
+        <h1 class="head-large">Les jeunes et la drogue</h1>
       </div>
     </div>
   </section>
